--- a/wp-content/themes/modeling-portfolio/assets/css/main.css
+++ b/wp-content/themes/modeling-portfolio/assets/css/main.css
@@ -296,7 +296,7 @@
     display: -webkit-flex;
     flex-direction: column; }
   .navbar-brand {
-    padding-right: 40px;
+    padding-right: 55px;
     /*padding-left:35px;*/ }
   .nav-item {
     display: flex;
@@ -942,7 +942,7 @@ about-section
   /*margin: 0;*/
   padding: 0;
   width: 100vh;
-  /*width: 100%;*/
+  max-width: 100%;
   height: 100%;
   display: table; }
   .modal-img:focus, .modal-img:hover {
