--- a/wp-content/themes/modeling-portfolio/assets/css/main.css
+++ b/wp-content/themes/modeling-portfolio/assets/css/main.css
@@ -113,15 +113,48 @@
   height: 100vh;
   /*max-height: 72vh;*/ }
   .header-section .header-slider .image-section img {
-    position: relative;
-    /*height: 1000px;*/
-    height: 100%;
-    background-position: top center;
-    background-size: cover;
+    /*position: relative;
+				height: 1000px;
+				height: 100%;
+				background-position: top center;
+				background-size: cover;
+				background-repeat: no-repeat;
+				display: block;
+				width: 100%;*/
+    height: auto;
+    width: 100%;
     background-repeat: no-repeat;
-    display: block;
-    width: 100%; }
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-position: center center; }
 
+/* 
+	HEADER PICTURES FIX
+.image-section { 
+	height: auto;
+	max-height: 60vh;
+	overflow: hidden;
+	img { 
+	/*	width: 100%;
+		height: auto;
+		max-height: 70vh;
+
+
+		max-height: 560px;
+		height: auto;
+		width: 100%;
+
+		background-repeat:no-repeat;
+		-webkit-background-size:cover;
+		-moz-background-size:cover;
+		-o-background-size:cover;
+		background-size:cover;
+		background-position:center;
+	}
+}
+*/
 .social-media {
   position: absolute;
   top: 50%;
